# Carbon-Footprint-App

./: .gitignore  APICalls.cpp  APICalls.h  App Files Diagram.drawio  CMakeLists.txt  FootprintMethodPage.cpp  FootprintMethodPage.h  HouseholdFootprintPage.h  MainController.cpp  MainController.h  MainPage.cpp  MainPage.h  README.md  SelectLanguagePage.cpp  diagram.bpmn  main.cpp  structura-aplicatie.txt
Utils/: FlightEntryWidget.cpp  FlightEntryWidget.h  HotelStayEntryWidget.cpp  HotelStayEntryWidget.h  MotorbikeEntryWidget.cpp  MotorbikeEntryWidget.h  PublicTransportWidget.cpp  PublicTransportWidget.h  VehicleEntryWidget.cpp  VehicleEntryWidget.h
assets/: airports.csv
backend-api-scripts/: emissions_by_car_fuel.py  emissions_by_electricity.py  emissions_by_flight.py  emissions_by_hotelStay.py  emissions_by_house_fuel.py  emissions_by_motorcycle.py  emissions_by_publicTransport.py  emissions_by_spendings_unfinished.py  emissions_by_vehicle_model.py  emissions_by_vehicle_type.py  total.txt
classes/: CommonStyles.h  ExpensesPage.cpp  ExpensesPage.h  FlightsPage.cpp  FlightsPage.h  FootprintMethodPage.cpp  FootprintMethodPage.h  HotelStayPage.cpp  HotelStayPage.h  HouseholdFootprintPage.cpp  HouseholdFootprintPage.h  MainController.cpp  MainController.h  MainPage.cpp  MainPage.h  MotorbikePage.cpp  MotorbikePage.h  PublicTransportPage.cpp  PublicTransportPage.h  SelectLanguagePage.cpp  SelectLanguagePage.h  VehiclePage.cpp  VehiclePage.h  total.txt
